# nopoll

./: .gitignore  AUTHORS  ChangeLog  Changelog  LATEST-VERSION  Makefile.win  NEWS  README  README-NOPOLL-WIN32.txt  TODO  VERSION  autogen.sh  buildrpm.sh  config.mk  config.mk.example  configure.ac  get-version.py  nopoll.pc.in  outdated-copyright.sh  prepare-nsh.sh  update-changelog.sh  versions.mk
debian-files/bionic/: README.Debian  control  copyright
debian-files/bookworm/: README.Debian  README.Debian~  changelog  control
debian-files/bullseye/: copyright
debian-files/buster/: README.Debian  changelog  copyright
debian-files/focal/: README.Debian  copyright
debian-files/jessie/: README.Debian  control
debian-files/lenny/: libnopoll0-dev.install
debian-files/noble/: README.Debian  changelog  copyright
debian-files/precise/: README.Debian
debian-files/squeeze/: changelog  rules
debian-files/stretch/: README.Debian  changelog  control  rules
debian-files/wheezy/: README.Debian  copyright
debian-files/xenial/: README.Debian  libnopoll0.install
doc/: Makefile.am  draft-ietf-hybi-thewebsocketprotocol-00.txt  draft-ietf-hybi-thewebsocketprotocol-09.txt  nopoll-doc-footer.html  nopoll.css  nopoll.doxygen.in  update-doc.sh
doc/release-notes/: nopoll-0.2.4.txt  nopoll-0.2.5.txt  nopoll-0.2.6.txt  nopoll-0.2.7.txt  nopoll-0.2.8.txt  nopoll-0.2.9.txt  nopoll-0.3.1.txt  nopoll-0.4.1.txt  nopoll-0.4.2.txt  nopoll-0.4.3.txt  nopoll-0.4.4.txt  nopoll-0.4.5.txt  nopoll-0.4.6.txt  nopoll-0.4.7.txt  nopoll-0.4.9.txt  release-rutine.txt
freebsd/: README.txt  buildpackages.sh
freebsd/10-x86-64/: manifest-libnopoll0-dev
freebsd/9-x86-64/: manifest-libnopoll0
freebsd/freebsd:9:x86:64/: files-libnopoll0-dev
rpm/SPECS/: changelog.inc  nopoll.spec
src/: Makefile.am  Makefile.win  libnopoll.def  nopoll.c  nopoll.h  nopoll_config_win32.h  nopoll_config_win64.h  nopoll_conn.c  nopoll_conn.h  nopoll_conn_opts.c  nopoll_conn_opts.h  nopoll_ctx.c  nopoll_ctx.h  nopoll_decl.c  nopoll_decl.h  nopoll_handlers.h  nopoll_hostcheck.c  nopoll_hostcheck.h  nopoll_hostname_compare.c  nopoll_hostname_compare.h  nopoll_hostname_validation.c  nopoll_hostname_validation.h  nopoll_inet_pton.c  nopoll_inet_pton.h  nopoll_io.c  nopoll_io.h  nopoll_listener.c  nopoll_listener.h  nopoll_log.c  nopoll_log.h  nopoll_loop.c  nopoll_loop.h  nopoll_msg.c  nopoll_msg.h  nopoll_private.h  nopoll_strcase.c  nopoll_strcase.h  nopoll_win32.c  nopoll_win32.h
test/: Makefile.am  Makefile.win  client-side-cert-auth-cacert.crt  client-side-cert-auth.crt  client-side-cert-auth.csr  client.pem  gen-certificates-test-21.sh  hostname-check.pem  nopoll-regression-client.c  nopoll-regression-common.c  nopoll-regression-common.h  nopoll-regression-listener.c  root.pem  server.pem  testConnect.css  testConnect.js
trunk/: INSTALL  Makefile.am  Makefile.win  TODO  VERSION  autogen.sh  buildrpm.sh  config.mk.example  configure.ac  get-version.py  nopoll.nsi  nopoll.pc.in  versions.mk
trunk/debian-files/squeeze/: changelog  control
trunk/debian-files/wheezy/: libnopoll0-dev.install
trunk/doc/: Makefile.am  draft-ietf-hybi-thewebsocketprotocol-09  nopoll-doc-header.html  nopoll.css  nopoll.doxygen.in
trunk/doc/release-notes/: nopoll-0.2.3.txt  nopoll-0.3.2.txt  release-rutine.txt
trunk/freebsd/: buildpackages.sh
trunk/freebsd/9-x86-64/: files-libnopoll0
trunk/src/: Makefile.am  libnopoll.def  nopoll.c  nopoll.h  nopoll_config_win32.h  nopoll_config_win64.h  nopoll_conn.c  nopoll_conn.h  nopoll_conn_opts.c  nopoll_conn_opts.h  nopoll_ctx.c  nopoll_ctx.h  nopoll_decl.c  nopoll_decl.h  nopoll_handlers.h  nopoll_io.c  nopoll_io.h  nopoll_listener.c  nopoll_listener.h  nopoll_log.c  nopoll_log.h  nopoll_loop.c  nopoll_loop.h  nopoll_msg.c  nopoll_msg.h  nopoll_private.h  nopoll_win32.c  nopoll_win32.h
trunk/test/: Makefile.am  Makefile.win  apache2-reg-test-def  client-side-cert-auth.key  client.pem  nopoll-regression-client.c  nopoll-regression-listener.c  server.pem  test-certificate.crt  test-private.key  testConnect.css  testConnect.html  testConnect.js  test_01.c
trunk/web/: commercial.html  downloads.html  index.html  licensing.html  news.html  nopoll.css  nopoll.html  projects.html  support.html
trunk/web/es/: commercial.html  downloads.html  index.html  licensing.html  news.html  nopoll.html  projects.html  support.html
web/: commercial.html  downloads.html  index.html  licensing.html  news.html  nopoll.css  nopoll.html  projects.html  support.html  update-web.sh
web/es/: commercial.html  downloads.html  index.html  licensing.html  news.html  nopoll.html  projects.html  support.html
